# competition-archive

./: .gitignore  Cargo.toml  Pipfile  exp.py
ahc/32/: 32  32.cpp  32.py  32_kai.py  greedy.py
ahc/35/: 35.cpp  35.py  35.rs  35_rand.rs  35_testcase.rs
ahc/37/: 37.py  37.rs
ahc/39/: 39.py  39.rs  39_after.py
ahc/40/: 40.py  40_1.py  40_2.py  40_3.py  tmp.py
ahc/41/: 41.py  a.py  main.py  main2.py  main3.py
ahc/42/: main.py  main_beam.py  miain.cpp
algorithm/: an.py  an2.py  an4.py  an5.py  hc.py  hc2.py  hc4.py
kaggle/2024-santa/: analysis_text_status.py  beam_search_prepare.py  exp.ipynb  exp2.py  get_block_stat.py  perm_ranges.py  permute_sublist.py
kaggle/2024-santa/algorithm/: an.py  an5.py  an6.py  an7.py  beamsearch.py  hc.py  hc2.py  hc3.py  hc4.py  hc5.py  shift_search.py  shift_solution.py  temp_plot.py
kaggle/2024-santa/input/: score_block_0.pkl  score_block_5.pkl
kaggle/2024-santa/input/pkl/: score_block_1.pkl  score_block_2.pkl  score_block_3.pkl  score_block_4.pkl  score_latest_4.pkl
kaggle/2024-santa/output/: blocks.pkl
kaggle/llms_youcant/input/: overview.md
